# shynet-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  sqlx-data.json
src/: configuration.rs  db_error.rs  lib.rs  main.rs  mobc_pool.rs  startup.rs
src/routes/: ingress.rs  mod.rs
templates/analytics/: script.js
