[package]
name = "analytics"
version = "0.1.0"
authors = ["Mike Glenn <mike.glenn@fourthwallcreative.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "3.0.2"
actix-rt = "1.1.1"
serde = { version = "1", features = ["derive"]}
serde_derive = "1.0.110"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate", "ipnetwork"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
config = "0.10.1"
regex = "1.3.9"
tera = "1.5.0"
woothee = "0.11"
listenfd = "0.3"
base64 = "0.12.3"
actix-cors = "0.3.0"
sha2 = "0.9.1"
hex-literal = "0.3.1"
hex = "0.4.2"
actix-redis = "0.9.1"
actix-session = "0.4.0"
mobc-redis = "0.5.2"
mobc = "0.5.10"
thiserror = "1.0.20"
sql-builder = "3.1.1"
refinery = { version = "0.3.0", features = ["postgres"]}
postgres = "0.17.3"
dotenv = "0.15.0"

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
